Change: migrate to chrono

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "compile-time"
 version = "0.2.0"
 edition = "2021"
 license = "MIT OR Apache-2.0"
-readme = "ReadMe.md"
+readme = "README.md"
 description = "Macros for getting compile time information."
 documentation = "https://docs.rs/compile-time"
 repository = "https://github.com/reitermarkus/compile-time-rs"
@@ -20,4 +20,4 @@ proc-macro2 = "1.0"
 quote = "1.0"
 rustc_version = "0.4"
 semver = "1"
-time = { version = "0.3.17", features = ["macros", "formatting"] }
+chrono = "0.4"
